--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -83,6 +83,7 @@
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
     <Compile Include="DataFactory\Employees\Employees.cs" />
+    <Compile Include="DataFactory\Employees\WebEmployee.cs" />
     <Compile Include="DataFactory\Equipment\Equipment.cs" />
     <Compile Include="DataFactory\Inventory\Inventory.cs" />
     <Compile Include="DataFactory\Messages\Resource.Designer.cs">
