Fixed Web Config to point to version 1.3.0 of WebGrease

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\DBI.Core\packages.config" />
   <repository path="..\DBI.Data\packages.config" />
   <repository path="..\DBI.Mobile.EMS\packages.config" />
+  <repository path="..\DBI.Web.EMS\packages.config" />
 </repositories>
