EV-40 Created Daily Activity Inventory table, also created constraints and foreign keys.  Corrected a spelling mistake on the chemical mix table

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -82,6 +82,9 @@
     <Compile Include="DAILY_ACTIVITY_HEADER.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="DAILY_ACTIVITY_INVENTORY.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
     <Compile Include="DAILY_ACTIVITY_WEATHER.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
