EV-43 Added table and foreign keys for Daily Activity Production table

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -85,6 +85,9 @@
     <Compile Include="DAILY_ACTIVITY_INVENTORY.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="DAILY_ACTIVITY_PRODUCTION.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
     <Compile Include="DAILY_ACTIVITY_WEATHER.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
