EV-55 created and added Daily Activity Status table

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -94,6 +94,9 @@
     <Compile Include="DAILY_ACTIVITY_PRODUCTION.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="DAILY_ACTIVITY_STATUS.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
     <Compile Include="DAILY_ACTIVITY_WEATHER.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
