--- a/DBI.Mobile.EMS/DBI.Mobile.EMS.csproj
+++ b/DBI.Mobile.EMS/DBI.Mobile.EMS.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json">
