--- a/packages/EntityFramework.5.0.0/EntityFramework.5.0.0.nuspec
+++ b/packages/EntityFramework.5.0.0/EntityFramework.5.0.0.nuspec
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
+<package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>EntityFramework</id>
     <version>5.0.0</version>
@@ -7,6 +7,7 @@
     <owners>Microsoft</owners>
     <licenseUrl>http://go.microsoft.com/fwlink/?LinkId=253898&amp;clcid=0x409</licenseUrl>
     <projectUrl>http://go.microsoft.com/fwlink/?LinkId=253891&amp;clcid=0x409</projectUrl>
+    <iconUrl>http://go.microsoft.com/fwlink/?LinkID=386613</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>Entity Framework is Microsoft's recommended data access technology for new applications.</description>
     <summary>Entity Framework is Microsoft's recommended data access technology for new applications.</summary>
@@ -14,8 +15,5 @@
       <frameworkAssembly assemblyName="System.Data.Entity" targetFramework="" />
       <frameworkAssembly assemblyName="System.ComponentModel.DataAnnotations" targetFramework="" />
     </frameworkAssemblies>
-    <references>
-      <reference file="EntityFramework.dll" />
-    </references>
   </metadata>
 </package>
