EV-68 Created and added drossings table

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -77,6 +77,9 @@
     <Compile Include="CLASS_CODES_V.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="CROSSING.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
     <Compile Include="DAILY_ACTIVITY_CHEMICAL_MIX.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
