EV-15 #time 11h Complete most of perdiem(waiting on ext.net ticket response) and completed check based on overlapping time on ManageExisting.aspx(changes row color)

--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -115,6 +115,7 @@
     <Content Include="Views\Modules\CrossingMaintenance\umSubDivisionsTab.aspx" />
     <Content Include="Views\Modules\DailyActivity\ImageLoader\ImageLoader.aspx" />
     <Content Include="Views\Modules\DailyActivity\umChemicalTab.aspx" />
+    <Content Include="Views\Modules\DailyActivity\umChoosePerDiem.aspx" />
     <Content Include="Views\Modules\DailyActivity\umCombinedTab.aspx" />
     <Content Include="Views\Modules\DailyActivity\umDailyActivity.aspx" />
     <Content Include="Views\Modules\DailyActivity\umEmployeesTab.aspx" />
@@ -209,6 +210,13 @@
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umChemicalTab.aspx.designer.cs">
       <DependentUpon>umChemicalTab.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umChoosePerDiem.aspx.cs">
+      <DependentUpon>umChoosePerDiem.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\DailyActivity\umChoosePerDiem.aspx.designer.cs">
+      <DependentUpon>umChoosePerDiem.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umCombinedTab.aspx.cs">
       <DependentUpon>umCombinedTab.aspx</DependentUpon>
