--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -124,8 +124,8 @@
     <Content Include="Views\Modules\DailyActivity\umHeaderTab.aspx" />
     <Content Include="Views\Modules\DailyActivity\umInventoryTab.aspx" />
     <Content Include="Views\Modules\DailyActivity\umManageExisting.aspx" />
-    <Content Include="Views\Modules\DailyActivity\umProductionTab-DBI.aspx" />
-    <Content Include="Views\Modules\DailyActivity\umProductionTab-IRM.aspx" />
+    <Content Include="Views\Modules\DailyActivity\umProductionTab_DBI.aspx" />
+    <Content Include="Views\Modules\DailyActivity\umProductionTab_IRM.aspx" />
     <Content Include="Views\Modules\DailyActivity\umSubmitActivity.aspx" />
     <Content Include="Views\Modules\DailyActivity\umWeatherTab.aspx" />
     <Content Include="Views\Modules\Security\umSecurityLogList.aspx" />
@@ -276,19 +276,19 @@
     <Compile Include="Views\Modules\DailyActivity\umManageExisting.aspx.designer.cs">
       <DependentUpon>umManageExisting.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Views\Modules\DailyActivity\umProductionTab-DBI.aspx.cs">
-      <DependentUpon>umProductionTab-DBI.aspx</DependentUpon>
+    <Compile Include="Views\Modules\DailyActivity\umProductionTab_DBI.aspx.cs">
+      <DependentUpon>umProductionTab_DBI.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Modules\DailyActivity\umProductionTab-DBI.aspx.designer.cs">
-      <DependentUpon>umProductionTab-DBI.aspx</DependentUpon>
+    <Compile Include="Views\Modules\DailyActivity\umProductionTab_DBI.aspx.designer.cs">
+      <DependentUpon>umProductionTab_DBI.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Views\Modules\DailyActivity\umProductionTab-IRM.aspx.cs">
-      <DependentUpon>umProductionTab-IRM.aspx</DependentUpon>
+    <Compile Include="Views\Modules\DailyActivity\umProductionTab_IRM.aspx.cs">
+      <DependentUpon>umProductionTab_IRM.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Modules\DailyActivity\umProductionTab-IRM.aspx.designer.cs">
-      <DependentUpon>umProductionTab-IRM.aspx</DependentUpon>
+    <Compile Include="Views\Modules\DailyActivity\umProductionTab_IRM.aspx.designer.cs">
+      <DependentUpon>umProductionTab_IRM.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\umSubmitActivity.aspx.cs">
       <DependentUpon>umSubmitActivity.aspx</DependentUpon>
